<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/colorWhite"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/ic_add"
            android:scaleType="fitXY"
            android:background="@null"
            android:padding="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:text="@string/upload_photo"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:gravity="bottom" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:text="@string/upload_photo_expl" />

        </LinearLayout>


    </LinearLayout>

    <EditText
        android:id="@+id/etName"
        android:background="@drawable/et_style"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="start"
        android:textSize="22dp"
        android:hint="@string/sign_up_name"
        android:inputType="text"
        />
    <EditText
        android:background="@drawable/et_style"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="start"
        android:textSize="22dp"
        android:hint="@string/username"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/etCreateEmail"
        android:background="@drawable/et_style"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="start"
        android:textSize="22dp"
        android:hint="@string/e_mail"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/etCreatePassword"
        android:background="@drawable/et_style"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="start"
        android:textSize="22dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
    <EditText
        android:background="@drawable/et_style"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="start"
        android:textSize="22dp"
        android:hint="@string/password_again"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/txtTermsOfService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/terms_of_service"
        android:textSize="13sp"
        android:autoLink="web"
        android:layout_gravity="center"
        android:linksClickable="true">
    </TextView>


    <Button
        android:id="@+id/btnCreateAccountDonex"
        android:text="@string/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@drawable/round"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

</LinearLayout>